--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Shiva Sreenivasan  # Replace with your name
-description: ML Researcher at NTU  # Replace with a short description
+description: ML Researcher at NTU. Check out a paper I published - https://doi.org/10.1016/j.engappai.2023.106676  # Replace with a short description
 url: "https://www.linkedin.com/in/shiva-sreenivasan/" #"https://krishrocks11.github.io"  # Your GitHub Pages URL
 baseurl: "" # the subpath of your site, e.g. /blog
 
